WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92177
[chromium] Calendar picker popup displays at wrong scale when deviceScaleFactor != 1.
https://bugs.webkit.org/show_bug.cgi?id=92177
Summary
[chromium] Calendar picker popup displays at wrong scale when deviceScaleFact...
Kevin Ellis
Reported
2012-07-24 16:46:14 PDT
[chromium] Calendar picker popup displays at wrong scale when deviceScaleFactor != 1.
Attachments
Patch
(1.72 KB, patch)
2012-07-24 16:52 PDT
,
Kevin Ellis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin Ellis
Comment 1
2012-07-24 16:52:24 PDT
Created
attachment 154176
[details]
Patch
Kent Tamura
Comment 2
2012-07-24 16:55:07 PDT
Comment on
attachment 154176
[details]
Patch ok. Thank you!
WebKit Review Bot
Comment 3
2012-07-25 08:09:43 PDT
Comment on
attachment 154176
[details]
Patch Clearing flags on attachment: 154176 Committed
r123619
: <
http://trac.webkit.org/changeset/123619
>
WebKit Review Bot
Comment 4
2012-07-25 08:09:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug