[chromium] Calendar picker popup displays at wrong scale when deviceScaleFactor != 1. https://bugs.webkit.org/show_bug.cgi?id=92177

Manually tested at deviceScaleFactor = 1 and 2.

Patch by Kevin Ellis <kevers@chromium.org> on 2012-07-25
Reviewed by Kent Tamura.

The device scale factor was not being set for the calendar popup.
As a result, the popup was rendered too small on hidpi displays.
This patch sets the device scale factor for any page popup.

* src/WebPagePopupImpl.cpp:
(WebKit::WebPagePopupImpl::initPage):

Canonical link: https://commits.webkit.org/110059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123619 268f45cc-cd09-0410-ab3c-d52691b4dbfc